<resources>
    <string name="action_settings">Settings</string>
    <string name="file_selected_number">%1$s file(s) selected, %2$s MB in total</string>
    <string name="mz_share_view_checkbox_text">Delete after sharing</string>
    <string name="mz_share_view_title">Share To</string>
    <string name="wechat_friends">WeChat Friend</string>
    <string name="wechat_pengyouquan">WeChat Moments</string>
    <string name="wechat_shoucang">WeChat Favorites</string>
    <string name="weibo_app">Weibo</string>
    <string name="mc_allow">OK</string>
    <string name="mc_alway_allow">Always allow</string>
    <string name="mc_cancel">Cancel</string>
    <string name="mc_cancel_button_text">Cancel</string>
    <string name="mc_cancel_collected_message">Canceled from Favorite</string>
    <string name="mc_cancel_praised_message">Cancel like</string>
    <string name="mc_change_num">Update</string>
    <string name="mc_collected_message">Favorite status</string>
    <string name="mc_custom_date_time_gregorian">Gregorian</string>
    <string name="mc_custom_date_time_lunar">Lunar</string>
    <string name="mc_date_time_day">d</string>
    <string name="mc_date_time_hour">h</string>
    <string name="mc_date_time_min">m</string>
    <string name="mc_date_time_month">m</string>
    <string name="mc_date_time_sec">s</string>
    <string name="mc_date_time_set">Set</string>
    <string name="mc_date_time_year">y</string>
    <string name="mc_description_target_answer">Answer</string>
    <string name="mc_description_target_decline">Reject</string>
    <string name="mc_disable">Disable</string>
    <string name="mc_downloading_patch_prefix">Download Update File</string>
    <string name="mc_downloading_prefix">Downloaded</string>
    <string name="mc_enhanceseekbar">Using slider control. Currently set to %1$s</string>
    <string name="mc_every_day">Every day</string>
    <string name="mc_friday">FR</string>
    <string name="mc_go_Refreshing">Go refresh</string>
    <string name="mc_hour">h</string>
    <string name="mc_is_Refreshing">Refreshing</string>
    <string name="mc_last_refresh">last refresh</string>
    <string name="mc_last_refresh_hour">hour(s) ago</string>
    <string name="mc_last_refresh_just_now">just now</string>
    <string name="mc_last_refresh_minute">minute(s) ago</string>
    <string name="mc_last_refresh_second">s ago</string>
    <string name="mc_loading_animation_alert">Saving image</string>
    <string name="mc_loading_view_text">Loading</string>
    <string name="mc_minute">m</string>
    <string name="mc_monday">MO</string>
    <string name="mc_never">Once</string>
    <string name="mc_permission_apply">Request for permission</string>
    <string name="mc_permission_message_content">%1$s requests %3$d permission(s) including %2$s</string>
    <string name="mc_pm_allow_check_app">OK</string>
    <string name="mc_pm_allow_dialog_push">Allow push</string>
    <string name="mc_pm_bluetooth">Bluetooth</string>
    <string name="mc_pm_call">Call</string>
    <string name="mc_pm_call_log">Read CallLog</string>
    <string name="mc_pm_camera">Camera (Photo/Video)</string>
    <string name="mc_pm_close">Close</string>
    <string name="mc_pm_contacts">Read Contacts</string>
    <string name="mc_pm_dialog_push">Pop-up push</string>
    <string name="mc_pm_dlg_cancel">Cancel</string>
    <string name="mc_pm_dlg_ok">OK</string>
    <string name="mc_pm_location">Locate</string>
    <string name="mc_pm_network">Cellular data</string>
    <string name="mc_pm_nfc">NFC</string>
    <string name="mc_pm_not_allow_check_app">Exit</string>
    <string name="mc_pm_not_allow_dialog_push">Disable</string>
    <string name="mc_pm_online_intenert">Internet</string>
    <string name="mc_pm_open">Open</string>
    <string name="mc_pm_r_mms">Read MMS</string>
    <string name="mc_pm_r_sms">Read SMS</string>
    <string name="mc_pm_recordaudio_local">Local/Calling Record</string>
    <string name="mc_pm_recordaudio_phone">Calling Record</string>
    <string name="mc_pm_s_mms">Send MMS</string>
    <string name="mc_pm_s_sms">Send SMS</string>
    <string name="mc_pm_set_bluetooth_on">Turn on Bluetooth</string>
    <string name="mc_pm_set_gprs_on">Turn on mobile network</string>
    <string name="mc_pm_set_wifi_on">Turn on WLAN</string>
    <string name="mc_pm_wlan">WLAN</string>
    <string name="mc_praised_message">Like</string>
    <string name="mc_pull_refresh">Pull down to refresh</string>
    <string name="mc_reject">Exit</string>
    <string name="mc_saturday">SA</string>
    <string name="mc_search">Search</string>
    <string name="mc_search_button_text">Search</string>
    <string name="mc_search_icon">Search</string>
    <string name="mc_search_icon_input_clear">Clear</string>
    <string name="mc_search_text">Search</string>
    <string name="mc_second">s</string>
    <string name="mc_sunday">SU</string>
    <string name="mc_thursday">TH</string>
    <string name="mc_time_picker_dialog_title">Schedule</string>
    <string name="mc_time_picker_leap">Leap month</string>
    <string name="mc_tuesday">TU</string>
    <string name="mc_updating_prefix">Updating</string>
    <string name="mc_value_checked">Selected</string>
    <string name="mc_value_not_checked">Not selected</string>
    <string name="mc_voice_icon">Voice Search</string>
    <string name="mc_wednesday">WE</string>
    <string name="mc_weekend">Weekend</string>
    <string name="mc_working_day">Weekdays</string>
    <string name="mc_yes">OK</string>
    <string name="more_item_label">More</string>
    <string name="mc_pattern_a_hour_before">1 hour ago</string>
    <string name="mc_pattern_a_minute_before">1 minute ago</string>
    <string name="mc_pattern_hour_before">, hours ago</string>
    <string name="mc_pattern_minute_before">, minutes ago</string>
    <string name="mc_pattern_month_day" formatted="false">%-m/%-e</string>
    <string name="mc_pattern_month_day_hour_minute" formatted="false">%-m/%-e %H:%M</string>
    <string name="mc_pattern_month_day_hour_minute_12" formatted="false">%-m/%-e %I:%M %p</string>
    <string name="mc_pattern_today">Today</string>
    <string name="mc_pattern_week_month_day_hour_minute" formatted="false">%a %-m/%-e %H:%M</string>
    <string name="mc_pattern_week_month_day_hour_minute_12" formatted="false">%a %-m/%-e %I:%M %p</string>
    <string name="mc_pattern_year_month" formatted="false">%Y/%-m</string>
    <string name="mc_pattern_year_month_day" formatted="false">%Y/%-m/%-e</string>
    <string name="mc_pattern_year_month_day_hour_minute" formatted="false">%Y/%-m/%-e %H:%M</string>
    <string name="mc_pattern_year_month_day_hour_minute_12" formatted="false">%Y/%-m/%-e %I:%M %p</string>
    <string name="mc_pattern_yesterday">Yesterday</string>
    <string name="mc_pattern_hour_minute_12" formatted="false">%I:%M %p</string>
    <string name="mc_pattern_week_hour_minute_12" formatted="false">%a %I:%M %p</string>
    <string name="mc_action_settings">Settings</string>
    <string name="mc_app_name">MeizuCommon</string>
    <string name="mc_hello_world">Hello world!</string>
    <string name="mc_pattern_hour_minute" formatted="false">%H:%M</string>
    <string name="mc_pattern_week">%a</string>
    <string name="mc_pattern_week_hour_minute" formatted="false">%a %H:%M</string>
    <string name="mc_selectionbutton_all">All</string>
    <string name="mc_simple_pattern_month_day" formatted="false">%-m/%-e</string>
    <string name="mc_simple_pattern_year_month_day" formatted="false">%Y/%-m/%-e</string>
    <string name="alwaysUse">Use this option as default</string>
    <string name="date_time_set">Set</string>
    <string name="mz_date_time_day">d</string>
    <string name="mz_date_time_hour">h</string>
    <string name="mz_date_time_min">m</string>
    <string name="mz_date_time_month">m</string>
    <string name="mz_date_time_sec">s</string>
    <string name="mz_date_time_year">y</string>
    <string name="mz_network_unavailable_hint">Network unavailable. Please check network settings.</string>
    <string name="mz_wif_setting_dialog_message">No network connection. Please check network settings.</string>
    <string name="mz_wif_setting_dialog_set">Set</string>
    <string name="status_bar_settings_wlan">WLAN</string>
    <string name="status_bar_settings_vpn">VPN</string>
    <string name="status_bar_settings_autobrightness">Auto-Brightness</string>
    <string name="status_bar_settings_nfc">NFC</string>
    <string name="status_bar_settings_smarttouch">SmartTouch</string>
    <string name="status_bar_settings_dndmode">DND</string>
    <string name="status_bar_settings_mute">Mute</string>
    <string name="status_bar_settings_vibrate">Vibrate</string>
    <string name="status_bar_settings_powersave">Power Saving</string>
    <string name="status_bar_settings_rotation">Auto-Rotate</string>
    <string name="mobile">Cellular Data</string>
    <string name="status_bar_settings_screenshot">Screenshot</string>
    <string name="status_bar_settings_datasave">Data Saver</string>
    <string name="status_bar_settings_hotspot">Hotspot</string>
    <string name="status_bar_settings_drivemode">Drive Assistant</string>
    <string name="status_bar_settings_eyeprotective">Eye-Friendly</string>
    <string name="status_bar_settings_accelerator">Accelerator</string>
    <string name="status_bar_settings_screenrecord">Screen Rec</string>
    <string name="quick_settings_connecting_label">Connecting...</string>
    <string name="quick_settings_bluetooth_devices_label">Bluetooth %d</string>
    <string name="qs_tiles_edit_tips_text">Drag up to add</string>
    <string name="mobile_data_disabled_message">Mobile data is not ready, please try again later.</string>
    <string name="flash_light_disabled">Please close camera or flashlight first</string>
    <string name="tile_powersave_standard">Smart</string>
    <string name="tile_powersave_user_defined">User defined</string>
    <string name="tile_powersave_super">Super mode</string>
    <string name="tile_mobiledata_2g_only">2G only</string>
    <string name="tile_mobiledata_3g_first">3G First</string>
    <string name="tile_mobiledata_3g_only">3G only</string>
    <string name="tile_mobiledata_4g_first">4G First</string>
    <string name="status_bar_settings_battery_meter_format_simple">%d</string>
    <string name="tile_bluetooth_detail_empty_text">No nearby Bluetooth devices were found.</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_connect">Connect</string>
    <string name="WidgetLayoutExtend_Description_smarttouch">SmartTouch</string>
    <string name="smarttouch_help_title">About SmartTouch</string>
    <string name="recents_extend_lock">Lock</string>
    <string name="recents_extend_secret">Secret</string>
    <string name="recents_extend_multi">Multi</string>
    <string name="intercepted_notification">Less important notifications</string>
    <string name="filter_notification_manage">Manage</string>
    <string name="filter_notification_clear">Clear</string>
    <string name="keyguard_palm_rejection_text">"Don't cover the top of the phone when unlocking"</string>
    <string name="keyguard_palm_rejection_exit">Double click volume button to exit</string>
    <string name="find_phone_tips_unknown_flyme">Flyme Account</string>
    <string name="find_phone_tips_enter_flyme">Phone is locked</string>
    <string name="find_phone_tips_enter_password">Meizu account password</string>
    <string name="find_phone_chat_button">Reply</string>
    <string name="find_phone_wifi_button">WLAN</string>
    <string name="find_phone_unlock">Unlock</string>
    <string name="keyguard_palm_rejection_calibrate">Calibrate</string>
    <string name="find_phone_finderMessage_hints">No Messages</string>
    <string name="keyboardview_forget_password">Forgot password</string>
    <string name="keyboardview_keycode_cancel">Cancel</string>
    <string name="kg_emergency_call_label">Emergency call</string>
</resources>