<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center|top" android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/keyguard_tips_second_line_textSize" android:textColor="#ff32a5e7" android:layout_gravity="right" android:id="@id/keyguard_palm_rejection_calibrate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:text="@string/keyguard_palm_rejection_calibrate" android:layout_marginEnd="13.0dip" />
    <ImageView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="156.0dip" android:src="@drawable/palm_rejection_image" android:contentDescription="@null" />
    <TextView android:textSize="@dimen/keyguard_tips_textSize" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/keyguard_palm_rejection_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyguard_palm_rejection_text" />
    <TextView android:textSize="@dimen/keyguard_tips_second_line_textSize" android:textColor="#80ffffff" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/keyguard_palm_rejection_exit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyguard_palm_rejection_exit" />
</LinearLayout>