<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <com.android.keyguard.EmergencyCarrierArea android:layout_gravity="start|bottom|center" android:orientation="vertical" android:id="@id/emergency_carrier_area" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <com.android.keyguard.CarrierText android:id="@id/carrier_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.4" />
        <com.android.keyguard.EmergencyButton android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/bouncer_emergency_call_button" android:background="@null" android:paddingLeft="@dimen/emergency_paddingLeft" android:paddingTop="@dimen/emergency_paddingTop" android:paddingRight="@dimen/emergency_paddingRight" android:paddingBottom="@dimen/emergency_paddingBottm" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kg_emergency_call_label" android:alpha="0.4" android:textAllCaps="false" android:fontFamily="sans-serif-medium" />
    </com.android.keyguard.EmergencyCarrierArea>
    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="bottom|center" android:id="@id/confirm_password" android:paddingBottom="@dimen/cancel_paddingBottom" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboardview_forget_password" android:alpha="0.4" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="end|bottom|center" android:id="@id/cancel" android:paddingLeft="@dimen/cancel_paddingLeft" android:paddingTop="@dimen/cancel_paddingTop" android:paddingRight="@dimen/cancel_paddingRight" android:paddingBottom="@dimen/cancel_paddingBottom" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboardview_keycode_cancel" android:alpha="0.4" android:fontFamily="sans-serif-medium" />
</FrameLayout>