<?xml version="1.0" encoding="utf-8"?>
<com.meizu.keyguard.MzKeyguardFindPhoneView android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/keyguard_find_phone_view" android:background="@color/findphone_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/find_phone_container" android:background="@color/findphone_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/font_of_findphone_tips" android:textColor="@color/tips_white" android:id="@id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/findphone_tips_marginTop" android:text="@string/find_phone_tips_enter_flyme" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" />
        <TextView android:textSize="@dimen/font_of_findphone_account" android:textColor="@android:color/white" android:textColorHint="@color/findphone_grey" android:gravity="center_vertical" android:id="@id/flymeAccount" android:background="@drawable/count_bg" android:layout_width="@dimen/findphone_text_width" android:layout_height="@dimen/findphone_unlock_btn_height" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginTop="@dimen/findphone_flymeAccount_marginTop" android:layout_marginRight="@dimen/margin_left_right" android:hint="@string/find_phone_tips_unknown_flyme" android:includeFontPadding="false" android:layout_below="@id/tips" android:fontFamily="sans-serif-medium" />
        <com.meizu.keyguard.PasswordEditText android:textSize="@dimen/font_of_findphone_password" android:textColor="@android:color/white" android:textColorHint="@color/findphone_grey" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/password" android:background="@drawable/count_bg" android:layout_width="@dimen/findphone_text_width" android:layout_height="@dimen/findphone_unlock_btn_height" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginTop="@dimen/findphone_passcode_marginTop" android:layout_marginRight="@dimen/margin_left_right" android:hint="@string/find_phone_tips_enter_password" android:password="true" android:singleLine="true" android:drawableRight="@drawable/ic_password" android:layout_below="@id/flymeAccount" android:inputType="textPassword" android:imeOptions="actionNone|flagForceAscii" android:imeActionId="6" android:textCursorDrawable="@drawable/findphone_password_cursor" android:fontFamily="sans-serif-medium" />
        <TextView android:textSize="@dimen/font_of_findphone_warning" android:textColor="@color/warning_red" android:id="@id/warning_tips" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/findphone_warning_tips_margin_left" android:layout_marginTop="@dimen/findphone_warning_marginTop" android:includeFontPadding="false" android:layout_below="@id/password" />
        <TextView android:textSize="@dimen/keyguard_tips_textSize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/button_ok" android:layout_width="@dimen/findphone_text_width" android:layout_height="@dimen/findphone_unlock_btn_height" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginTop="@dimen/findphone_done_marginTop" android:layout_marginRight="@dimen/margin_left_right" android:text="@string/find_phone_unlock" android:includeFontPadding="false" android:layout_below="@id/password" android:fontFamily="sans-serif-medium" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/font_of_findphone_wifi" android:textColor="@color/wifi_blue" android:id="@id/wifi_button" android:paddingTop="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/findphone_wifi_marginTop" android:text="@string/find_phone_wifi_button" android:layout_below="@id/button_ok" android:fontFamily="sans-serif-medium" style="?android:attr/buttonBarButtonStyle" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/buttom_message" android:background="@drawable/message_bkg" android:layout_width="fill_parent" android:layout_height="@dimen/findphone_message_height" android:layout_alignParentBottom="true">
                <ImageView android:layout_gravity="center_vertical" android:paddingLeft="@dimen/findphone_message_icon_padding_left" android:paddingRight="@dimen/findphone_message_icon_padding_right" android:layout_width="@dimen/findphone_message_icon_weight" android:layout_height="@dimen/findphone_message_icon_height" android:src="@drawable/ic_launcher_smsmms" android:scaleType="centerInside" />
                <ScrollView android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/lock_findphone_scrollview" android:scrollbars="none" android:layout_width="@dimen/findphone_scrollview_width" android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/lock_findphone_black_board" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true">
                        <TextView android:textSize="@dimen/font_of_findphone_message" android:textColor="@color/message_grep" android:textColorHint="@color/findphone_grey" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/finderMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/find_phone_finderMessage_hints" android:maxLines="2" android:fontFamily="sans-serif-medium" />
                    </LinearLayout>
                </ScrollView>
                <TextView android:layout_gravity="center_vertical" android:id="@id/line" android:background="@color/findphone_grey" android:layout_width="@dimen/line_width" android:layout_height="@dimen/line_height" android:layout_marginLeft="@dimen/findphone_line_margin_top" />
                <Button android:textSize="@dimen/font_of_findphone_message" android:textColor="@color/findphone_reply_blue" android:gravity="center" android:layout_gravity="center|right" android:id="@id/find_chat_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/find_phone_chat_button" android:layout_centerHorizontal="true" style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</com.meizu.keyguard.MzKeyguardFindPhoneView>