<?xml version="1.0" encoding="utf-8"?>
<com.meizu.sharewidget.widget.ColorRelativeLayout android:id="@id/share_layout" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.meizu.sharewidget.widget.ColorTextView android:textSize="17.0sp" android:id="@id/share_title" android:paddingTop="27.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mz_share_view_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-medium" />
    <FrameLayout android:id="@id/second_title_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_below="@id/share_title">
        <com.meizu.sharewidget.widget.SummaryTextView android:textSize="12.0sp" android:layout_gravity="center_horizontal" android:id="@id/share_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_selected_number" android:fontFamily="sans-serif-medium" />
        <CheckBox android:textSize="14.0sp" android:textColor="@color/colorGrey" android:layout_gravity="center_horizontal" android:id="@id/checkbox_view" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="24.0dip" android:text="@string/mz_share_view_checkbox_text" android:fontFamily="sans-serif-medium" style="@style/Widget.Flyme.ShareView.CheckBox" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/second_title_view">
        <com.meizu.sharewidget.widget.ViewPagerOverScrollLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <android.support.v4.view.ViewPager android:id="@id/share_viewpager" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </com.meizu.sharewidget.widget.ViewPagerOverScrollLayout>
        <LinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/point_view" android:paddingBottom="13.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</com.meizu.sharewidget.widget.ColorRelativeLayout>