<?xml version="1.0" encoding="utf-8"?>
<com.flyme.systemui.statusbar.notification.NotificationFilterPanel android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/filter_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/notification_filter_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/filter_header_margin_top_portrait">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginRight="27.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/filter_intercepted_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intercepted_notification" android:layout_alignParentLeft="true" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/dismiss_filter_btn" android:background="?android:selectableItemBackground" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/filter_notification_clear" android:layout_toLeftOf="@id/filter_settings" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/filter_settings" android:background="?android:selectableItemBackground" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filter_notification_manage" android:layout_alignParentRight="true" android:fontFamily="sans-serif-medium" />
        </RelativeLayout>
        <View android:background="@drawable/ic_panel_line" android:layout_width="fill_parent" android:layout_height="0.6700001dip" android:layout_marginLeft="@dimen/notification_panel_side_padding" android:layout_marginTop="13.0dip" android:layout_marginRight="@dimen/notification_panel_side_padding" />
    </LinearLayout>
    <com.android.systemui.statusbar.stack.NotificationStackScrollLayout android:layout_gravity="@integer/notification_panel_layout_gravity" android:id="@id/notification_filter_stack" android:layout_width="@dimen/notification_panel_width" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="@dimen/mz_min_close_handle_underlap" android:importantForAccessibility="no" />
</com.flyme.systemui.statusbar.notification.NotificationFilterPanel>